# surya-pdf-ocr

./: .gitignore  .pre-commit-config.yaml  README.md  explore.ipynb  pyproject.toml  run_ocr.py
